# SMS-Gateway

./: .dockerignore  .env.example  .gitignore  README.md  conftest.py  docker-compose.yml  pyproject.toml
docker/: Dockerfile.api  Dockerfile.express-worker  Dockerfile.fair-scheduler  Dockerfile.migrate  Dockerfile.normal-worker  Dockerfile.outbox-relay
docs/: api.md  architecture.md  assumptions.md  database.md  decisions.md  deployment.md  how-it-works.md  observability.md  queue.md  scalability.md  security.md  sequence-diagrams.md  testing.md
docs/rfc/: 0001-sms-gateway-design.md
libs/gateway_common/: pyproject.toml
libs/gateway_common/src/gateway_common/: config.py  fanout.py  health.py  health_server.py  logging.py  metrics.py  pagination.py  request_context.py  shutdown.py  validation.py
libs/gateway_common/src/gateway_common/db/: engine.py  models.py
libs/gateway_common/src/gateway_common/domain/: cost.py  enums.py  errors.py
libs/gateway_common/src/gateway_common/kafka/: consumer.py  producer.py  topics.py
libs/gateway_common/src/gateway_common/operator/: factory.py  http_client.py  mock.py  protocol.py
libs/gateway_common/src/gateway_common/redis/: client.py  drr_store.py  idempotency.py
libs/gateway_common/tests/: test_cost.py  test_errors.py  test_logging_fields.py  test_pagination.py  test_validation.py
libs/worker_kit/: pyproject.toml
libs/worker_kit/src/worker_kit/: dispatch_lock.py  dlq.py  loop.py  refund.py  retry.py
libs/worker_kit/tests/: conftest.py  test_dlq.py  test_loop.py  test_refund.py  test_retry.py
migrations/: env.py
migrations/versions/: 0001_init_schema.py  0002_seed_dev_tenant.py
services/api/: pyproject.toml
services/api/src/api_service/: app.py  config.py  deps.py  error_handlers.py  main.py
services/api/src/api_service/middleware/: body_size_limit.py  rate_limit.py  request_id.py
services/api/src/api_service/routers/: batch.py  health.py  reports.py  sms.py  wallet.py
services/api/src/api_service/schemas/: batch.py  errors.py  reports.py  sms.py  wallet.py
services/api/src/api_service/services/: idempotency_service.py  reporting.py  submission.py  wallet_service.py
services/api/tests/integration/: conftest.py  test_wallet_charge.py  test_wallet_concurrency.py
services/express_worker/: pyproject.toml
services/express_worker/src/express_worker/: main.py  settings.py
services/fair_scheduler/: pyproject.toml
services/fair_scheduler/src/fair_scheduler/: drr.py  ingest.py  main.py  round_loop.py  settings.py
services/fair_scheduler/tests/unit/: test_drr.py
services/normal_worker/: pyproject.toml
services/normal_worker/src/normal_worker/: main.py  settings.py
services/outbox_relay/: pyproject.toml
services/outbox_relay/src/outbox_relay/: main.py  relay.py  settings.py
tests/: conftest.py
