[project]
name = "sms-gateway-workspace"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "libs/*",
    "services/*",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "testcontainers[postgres,redis,kafka]>=4.8",
    "ruff>=0.7",
    "mypy>=1.13",
    "httpx>=0.27",
    # alembic itself is a gateway_common dependency (see that package's
    # pyproject.toml) — the workspace's single shared venv already has it.
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: requires Docker (Postgres/Redis/Kafka via testcontainers)",
]
testpaths = [
    "libs/gateway_common/tests",
    "libs/worker_kit/tests",
    "services/api/tests",
    "services/outbox_relay/tests",
    "services/fair_scheduler/tests",
    "services/express_worker/tests",
    "services/normal_worker/tests",
]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: Depends(...)/Header(...) in a default is FastAPI's documented DI
# idiom, not the mutable-default-argument footgun the rule targets.
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
# Raw SQL DDL strings occasionally exceed line-length; wrapping them would
# hurt SQL readability for no real benefit.
"migrations/versions/*.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
