[project]
name = "gateway-common"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "redis>=5.2",
    "aiokafka>=0.12",
    "structlog>=24.4",
    "prometheus-client>=0.21",
    "httpx>=0.27",
    # Not used at runtime by gateway_common itself — co-located here because
    # migrations/env.py imports gateway_common.db directly, so the `migrate`
    # one-shot compose service can sync just this one package rather than
    # pulling in the full dev dependency group (pytest, ruff, mypy, ...).
    "alembic>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gateway_common"]
