[project]
name = "worker-kit"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "gateway-common",
    "aiokafka>=0.12",
    "structlog>=24.4",
    "redis>=5.2",
]

[tool.uv.sources]
gateway-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker_kit"]
