[project]
name = "api-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "gateway-common",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[tool.uv.sources]
gateway-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api_service"]
