[project]
name = "express-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "gateway-common",
    "worker-kit",
]

[tool.uv.sources]
gateway-common = { workspace = true }
worker-kit = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/express_worker"]
