[project]
name = "fair-scheduler"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "gateway-common",
]

[tool.uv.sources]
gateway-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fair_scheduler"]
